Fix pipeline box overflow with scroll
This change set back the possibility to have scroll on multi stage
pipeline. Moving the display to inline

--- a/ui/src/main/js/view/templates/pipeline-staged.less
+++ b/ui/src/main/js/view/templates/pipeline-staged.less
@@ -23,6 +23,8 @@
 #pipeline-box {
   position: relative;
   box-sizing: border-box;
+  display: inline;
+  overflow: auto;
 
   .extension-dock {
     font-size: 11px;
