--- a/ui/src/main/less/stageview.less
+++ b/ui/src/main/less/stageview.less
@@ -1,8 +1,7 @@
 // The main container for CBWF Stage View
 .cbwf-stage-view {
-  padding: 15px 0;
   clear: right;
-  display: inline-block;
+  overflow: auto;
 }
 
 // Selectively import some twitter bootstrap styles.  Namespace them too.
